# pyltp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  setup.py  upload.py
.github/workflows/: python-package.yml  python-publish.yml
example/: example.py
src/: pyltp.cpp
